@@ -50,21 +50,21 @@ class ShopControllerTest {
 	@Order(1)
 	@Test
 	void testBuyLocal() throws InterruptedException {
-		ExecutorService service = Executors.newFixedThreadPool(500);
-		CountDownLatch countDownLatch = new CountDownLatch(500);
-		for (int i = 0; i < 500; i++) {
-			service.submit(() -> {
-				try {
-					mockMvc.perform(post("/shop/buy/local")).andExpect(status().isOk());
-					countDownLatch.countDown();
-				}
-				catch (Exception e) {
-					throw new RuntimeException(e);
-				}
-			});
+		try (ExecutorService service = Executors.newFixedThreadPool(500, Thread.ofVirtual().factory())) {
+			CountDownLatch countDownLatch = new CountDownLatch(500);
+			for (int i = 0; i < 500; i++) {
+				service.submit(() -> {
+					try {
+						mockMvc.perform(post("/shop/buy/local")).andExpect(status().isOk());
+						countDownLatch.countDown();
+					} catch (Exception e) {
+						throw new RuntimeException(e);
+					}
+				});
+			}
+			countDownLatch.await();
+			service.shutdown();
 		}
-		countDownLatch.await();
-		service.shutdown();
 	}
 
 	@Order(2)
